--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
         "require-jsdoc": ["error", {
             "require": {
                 "FunctionDeclaration": false,
-                "MethodDefinition": false,
+                "MethodDefinition": true,
                 "ClassDeclaration": false,
                 "ArrowFunctionExpression": false,
                 "FunctionExpression": false
