--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-jest": "^27.1.7",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "latest",
+    "jest": "^29.3.1",
     "prettier": "^2.8.1"
   }
 }
