--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "my-app",
+  "name": "cs-pension",
   "version": "0.1.0",
+  "homepage": "https://r0w4n.github.io/cs-pension/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +53,7 @@
     "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "latest",
+    "gh-pages": "^4.0.0",
     "jest": "^29.3.1",
     "prettier": "^2.8.1"
   }
