--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,38 +25,37 @@
         "indent": ["error", 4],
         "quotes": ["error", "double"],
         "max-len": ["error", 160],
-        "space-infix-ops": ["error", { "int32Hint": true }],
-        "jsdoc/check-access": 1, // Recommended
-        "jsdoc/check-alignment": 1, // Recommended
- 
-        "jsdoc/check-param-names": 1, // Recommended
-        "jsdoc/check-property-names": 1, // Recommended
-        "jsdoc/check-tag-names": 1, // Recommended
-        "jsdoc/check-types": 1, // Recommended
-        "jsdoc/check-values": 1, // Recommended
-        "jsdoc/empty-tags": 1, // Recommended
-        "jsdoc/implements-on-classes": 1, // Recommended
-        "jsdoc/multiline-blocks": 1, // Recommended
-        "jsdoc/newline-after-description": 1, // Recommended
-        "jsdoc/no-multi-asterisks": 1, // Recommended
-        "jsdoc/no-undefined-types": 1, // Recommended
-        "jsdoc/require-jsdoc": 1, // Recommended
-        "jsdoc/require-param": 1, // Recommended
-        "jsdoc/require-param-description": 1, // Recommended
-        "jsdoc/require-param-name": 1, // Recommended
-        "jsdoc/require-param-type": 1, // Recommended
-        "jsdoc/require-property": 1, // Recommended
-        "jsdoc/require-property-description": 1, // Recommended
-        "jsdoc/require-property-name": 1, // Recommended
-        "jsdoc/require-property-type": 1, // Recommended
-        "jsdoc/require-returns": 1, // Recommended
-        "jsdoc/require-returns-check": 1, // Recommended
-        "jsdoc/require-returns-description": 1, // Recommended
-        "jsdoc/require-returns-type": 1, // Recommended
-        "jsdoc/require-throws": 1,
-        "jsdoc/require-yields": 1, // Recommended
-        "jsdoc/require-yields-check": 1, // Recommended
-        "jsdoc/tag-lines": 1, // Recommended
-        "jsdoc/valid-types": 1 // Recommended
+        "space-infix-ops": ["error", { "int32Hint": true }]
+        // "jsdoc/check-access": 1, // Recommended
+        // "jsdoc/check-alignment": 1, // Recommended
+        // "jsdoc/check-param-names": 1, // Recommended
+        // "jsdoc/check-property-names": 1, // Recommended
+        // "jsdoc/check-tag-names": 1, // Recommended
+        // "jsdoc/check-types": 1, // Recommended
+        // "jsdoc/check-values": 1, // Recommended
+        // "jsdoc/empty-tags": 1, // Recommended
+        // "jsdoc/implements-on-classes": 1, // Recommended
+        // "jsdoc/multiline-blocks": 1, // Recommended
+        // "jsdoc/newline-after-description": 1, // Recommended
+        // "jsdoc/no-multi-asterisks": 1, // Recommended
+        // "jsdoc/no-undefined-types": 1, // Recommended
+        // "jsdoc/require-jsdoc": 1, // Recommended
+        // "jsdoc/require-param": 1, // Recommended
+        // "jsdoc/require-param-description": 1, // Recommended
+        // "jsdoc/require-param-name": 1, // Recommended
+        // "jsdoc/require-param-type": 1, // Recommended
+        // "jsdoc/require-property": 1, // Recommended
+        // "jsdoc/require-property-description": 1, // Recommended
+        // "jsdoc/require-property-name": 1, // Recommended
+        // "jsdoc/require-property-type": 1, // Recommended
+        // "jsdoc/require-returns": 1, // Recommended
+        // "jsdoc/require-returns-check": 1, // Recommended
+        // "jsdoc/require-returns-description": 1, // Recommended
+        // "jsdoc/require-returns-type": 1, // Recommended
+        // "jsdoc/require-throws": 1,
+        // "jsdoc/require-yields": 1, // Recommended
+        // "jsdoc/require-yields-check": 1, // Recommended
+        // "jsdoc/tag-lines": 1, // Recommended
+        // "jsdoc/valid-types": 1 // Recommended
     }
 }
