--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,21 +1,18 @@
+name: React app deployement
+
 on:
   push:
-    branches:
-      - "dev"
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+    branches: [ dev ]
+  pull_request:
+    branches: [ dev ]
 
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.build-publish.outputs.page_url }}
+  build:
+
     runs-on: ubuntu-latest
+    
     steps:
-    - id: build-publish
-      uses: bitovi/github-actions-react-to-ghp@v1.2.0
-      with:
-        path: dist
+    - uses: actions/checkout@v2
+
+    - name: Deploy react app to github pages
+      uses: tanwanimohit/deploy-react-to-ghpages@v1.0.1
