--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-.yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 node_modules
 coverage
 build
