--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,4 +1,4 @@
-name: Test
+name: Lint
 on: [push, pull_request]
 jobs:
   build:
@@ -7,5 +7,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install modules
       run: yarn
-    - name: Run tests
-      run: yarn test
+    - name: Run ESLint
+      run: eslint . --ext .js,.jsx,.ts,.tsx
+  
