--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -8,5 +8,5 @@ jobs:
     - name: Install modules
       run: yarn
     - name: Run ESLint
-      run: eslint . --ext .js,.jsx,.ts,.tsx
+      run: yarn lint . --ext .js,.jsx,.ts,.tsx
   
