--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
+    "@mui/lab": "^5.0.0-alpha.115",
     "@mui/material": "^5.10.17",
     "isnumeric": "^0.3.3",
     "prop-types": "^15.8.1",
