--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-scripts": "^5.0.1",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^2.1.4"
