--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "isnumeric": "^0.3.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
     "react-ga4": "^1.4.1",
     "react-scripts": "^5.0.1",
