--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
     "react-cookie-consent": "^8.0.1",
     "react-dom": "^18.2.0",
     "react-ga4": "^1.4.1",
-    "react-scripts": "^5.0.1",
     "typeface-roboto": "^1.1.13",
-    "web-vitals": "^2.1.4",
-    "yarn": "^1.22.22"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,6 +55,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "latest",
     "jest": "^29.3.1",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "react-scripts": "^5.0.1"
   }
 }
